Reimplemented configuration API in Rust (#4)
This replaces the old configuration API implementation with a new one written in Rust. Unlike the old implementation, which was entirely Windows-specific, the new implementation is platform-agnostic, well-defined in terms of supported variables, and can easily be adapted to new configuration file formats.

In addition, this also changes the configuration file format from INI to TOML. TOML is similar to INI, but is formally specified and has several advantages over INI, such as nesting and additional value types. Other formats such as JSON or YAML could have been used instead, but TOML was chosen specifically because TOML documents resemble INI files, so users will likely find them familiar enough to work with.

The implementation itself is divided into two components: a library providing the actual implementation, and a transition layer that emulates the old API. The latter is intended solely for existing C++ code and will hopefully be phased out someday.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -99,5 +99,14 @@ if(WIN32)
         message(FATAL_ERROR "MFC not found; ensure that MFC is installed and try again")
     endif(NOT ${MFC_FOUND})
 endif(WIN32)
+# Rust bails out during the linker phase if you try to cross-compile under a Visual Studio command
+# prompt. Just build the Rust libs manually then run CMake...
+if(${CMAKE_BUILD_TYPE} MATCHES "Debug")
+    set(OPENCHAOS_FFI_DIR $ENV{OPENCHAOS_RUST_OUTPUT_DIR}/debug)
+else(${CMAKE_BUILD_TYPE} MATCHES "Debug")
+    set(OPENCHAOS_FFI_DIR $ENV{OPENCHAOS_RUST_OUTPUT_DIR}/release)
+endif(${CMAKE_BUILD_TYPE} MATCHES "Debug")
+link_directories(${OPENCHAOS_FFI_DIR})
+# Build the C++ code.
 add_subdirectory(MFStdLib)
 add_subdirectory(fallen)
